# telesoft

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile.api  Dockerfile.nginx  README.md  docker-compose.preview.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
docs/decisions/: 2026-07-20-pr-12-db-layer.md  2026-07-20-pr-14-spike-telethon.md  2026-07-20-pr-16-telegram-client.md  2026-07-20-pr-18-auth.md  2026-07-20-pr-2-repo-init.md  2026-07-20-pr-20-channels-api.md  2026-07-20-pr-22-replace-link-runner-ws.md  2026-07-20-pr-24-frontend-skeleton.md  2026-07-20-pr-26-channels-ui.md  2026-07-20-pr-28-finalize-readme.md  2026-07-20-pr-30-spike-telethon-v2.md  2026-07-20-pr-32-get-last-messages.md  2026-07-20-pr-34-replace-link-auto-discovery.md  2026-07-20-pr-36-replace-link-limit.md  2026-07-20-pr-37-mobile-responsive.md  2026-07-20-pr-38-mobile-responsive.md  2026-07-20-pr-40-websocket-mobile-discovery.md  2026-07-20-pr-42-e2e-playwright.md  2026-07-20-pr-<PR-NUMBER>-auth.md  2026-07-20-pr-<PR-NUMBER>-channels-api.md  2026-07-20-pr-<PR-NUMBER>-channels-ui.md  2026-07-20-pr-<PR-NUMBER>-db-layer.md  2026-07-20-pr-<PR-NUMBER>-repo-init.md  2026-07-20-pr-<PR-NUMBER>-spike-telethon-v2.md  2026-07-20-pr-<PR-NUMBER>-spike-telethon.md  2026-07-20-pr-<PR-NUMBER>-telegram-client.md  2026-07-20-pr-<PR-NUMBER>-websocket-mobile-discovery.md  2026-07-20-pr-PLACEHOLDER-e2e-playwright.md  2026-07-20-pr-PLACEHOLDER-frontend-skeleton.md  2026-07-20-pr-PR_NUMBER-get-last-messages.md  2026-07-20-pr-XXX-replace-link-runner-ws.md  2026-07-20-pr-__PR_NUMBER__-finalize-readme.md  2026-07-21-pr-44-entity-url-handling.md  2026-07-21-pr-46-string-session.md  2026-07-21-pr-48-session-string.md  2026-07-21-pr-50-telegram-rate-limiting.md  2026-07-21-pr-52-replace-raw-api.md  2026-07-21-pr-54-production-compose.md  2026-07-21-pr-56-pattern-compiler.md  2026-07-21-pr-58-three-modes-ui.md  (+41 more)
docs/handoff/: pr-100-filter-select.md  pr-102-remove-back-link.md  pr-104-show-username.md  pr-106-remove-open-button.md  pr-12-db-layer.md  pr-14-spike-telethon.md  pr-16-telegram-client.md  pr-18-auth.md  pr-2-repo-init.md  pr-20-channels-api.md  pr-22-replace-link-runner-ws.md  pr-24-frontend-skeleton.md  pr-26-channels-ui.md  pr-28-finalize-readme.md  pr-30-spike-telethon-v2.md  pr-32-get-last-messages.md  pr-34-replace-link-auto-discovery.md  pr-36-replace-link-limit.md  pr-37-mobile-responsive.md  pr-38-mobile-responsive.md  pr-40-websocket-mobile-discovery.md  pr-42-e2e-playwright.md  pr-44-entity-url-handling.md  pr-46-string-session.md  pr-48-session-string.md  pr-50-telegram-rate-limiting.md  pr-52-replace-raw-api.md  pr-54-production-compose.md  pr-56-pattern-compiler.md  pr-58-three-modes-ui.md  pr-60-seed-patterns.md  pr-62-post-link-and-floodwait.md  pr-64-formatting-preview-radio.md  pr-66-entity-crossing-boundary.md  pr-68-raw-text-not-markdown.md  pr-69-entity-offset-math.md  pr-70-entity-offset-math.md  pr-72-russian-ui.md  pr-74-top-navigation.md  pr-76-preview-checkbox-off.md  (+47 more)
docs/project-map/: README.md  backend.md  (+5 more)
scripts/: smoke_test.py  spike_telethon.py  spike_telethon_v2.py
tests/: conftest.py  test_api_channels.py  test_api_jobs.py  test_api_patterns.py  test_auth.py  test_config.py  test_db.py  test_health.py  test_link_replacer.py  test_models_channel.py  test_models_job.py  test_models_log.py  test_models_pattern.py  test_pattern_compiler.py  test_preview_replace.py  test_seed_patterns.py  test_telegram_client.py  test_url_parser.py  test_websocket.py
web/: .gitignore  Dockerfile.web  biome.json  knip.json  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
(+63 files in other folders)
